Logical grid and row/col counts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <canvas id="gameCanvas"></canvas>
 
-<button id="startGameButton">Start game</button>
+<button id="startGameButton">start game</button>
+
+<button id="pauseGameButton">pause</button>
 
 <div id="messageBox"></div>
 
