Display target on level load

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <button id="pauseGameButton">pause</button>
 
-<div id="messageBox"></div>
+<div id="levelTarget"></div>
+
+<div id="message"></div>
 
 </body>
 </html>
