Display level number

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <button id="pauseGameButton">pause</button>
 
+<div id="currentLevel"></div>
+
 <div id="levelTarget"></div>
 
 <div id="message"></div>
